Fix margin on mobile breadcrumbs trigger

--- a/src/sass/partials/_breadcrumbs.scss
+++ b/src/sass/partials/_breadcrumbs.scss
@@ -18,7 +18,7 @@
     &.has-js {
         
         display: block;
-        margin: 1rem 0 0;
+        margin: .8rem 0;
         
         div {
             position: relative;
